--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body id="page-top">
-
+<!-- Some comment -->
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
