--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/van.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/about/van.png" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
